added slides, src

--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-CouchDB: HTTP and JSON Persistence
+<!doctype html>
+<html>
+  <head>
+    <title>CouchDB: HTTP and JSON Persistence</title>
+    <meta name="viewport" content="width=device-width">
+  </head>
+  
+  
+  <body>
+    <h1>CouchDB: HTTP and JSON Persistence</h1>
+    <p>
+			<a href="couchdb_ScottDavis.pdf">Slides</a> (PDF, 4.2mb)<br/>
+	  	<a href="src.zip">Source</a> (ZIP, 2kb)
+	  </p>
+    <hr/>
+
+		<h2>Description</h2>
+		<p>
+"CouchDB is built of the Web. I've never seen software that so completely embraces the philosophies behind HTTP." Jacob Kaplan-Moss, Django Developer
+		</p>
+
+		<p>
+Apache CouchDB is a schema-free document store that uses HTTP GETs, PUTs, and DELETEs instead of SQL SELECTs, INSERTs, and DELETEs. It speaks JSON fluently instead of tables, columns, and rows. It uses JavaScript Map/Reduce functions instead of SQL for the query language. It offers effortless replication among distributed CouchDB instances.
+		</p>
+		
+		<p>
+If you are a web developer that is looking for a modern persistence solution -- one that speaks your "native" language of HTTP and JSON -- CouchDB should be a part of your technology stack. Come learn more about this incredibly web-friendly persistence store for the 21st century. Just don't call it a "database"...
+		</p>
+
+    <hr/>
+    <p><a rel = "license"
+    		  href="http://creativecommons.org/licenses/by/3.0/"
+          title="Creative Commons Attribution 3.0 License"
+           ><img src="http://i.creativecommons.org/l/by/3.0/88x31.png"
+                 alt="License"/></a> 
+        <a href="http://thirstyhead.com">ThirstyHead.com</a>
+    </p>
+
+  </body>
+</html>
+
